--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.7",
+    "path": "^0.12.7"
   }
 }
